# core

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  main.rs
.github/workflows/: lockdown.yml
src/: suggestions.rs  utils.rs
src/suggestions/: corrections.rs  time.rs
