[package]
name = "agentcore"
version = "0.1.0"
authors = ["bleonard252"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
json = "0.12.4"
chrono = "0.4.19"
strsim = "0.10.0"
regex = "1"

[[bin]]
name = "agentcore"
path = "main.rs"
